erlang-lager (3.6.6-0.1) unstable; urgency=low

  * New upstream version 3.6.6
  * Improved debian/watch

 -- Mathias Ertl <mati@jabber.at>  Sun, 30 Dec 2018 13:45:59 +0100

erlang-lager (3.5.1-0.1) unstable; urgency=low

  * New upstream release.
  * Update Standards-Version to 4.0.0 (no changes needed).
  * Add dh-rebar as build-dependency.
  * Update watch file.

 -- Mathias Ertl <mati@jabber.at>  Fri, 07 Jul 2017 18:40:55 +0200

erlang-lager (3.0.2-0.1) unstable; urgency=low

  * New upstream release.
  * Add XSBC-Orig-Maintainer field.

 -- Mathias Ertl <mati@jabber.at>  Thu, 03 Dec 2015 11:17:34 +0100

erlang-lager (3.0.1-0.1) unstable; urgency=low

  * New upstream release.

 -- Mathias Ertl <mati@jabber.at>  Sat, 03 Oct 2015 16:23:49 +0200

erlang-lager (2.0.3.26-2) unstable; urgency=low

  * Remove lager_common_test_backend before configuring, otherwise the .app
    file requires it.

 -- Mathias Ertl <mati@jabber.at>  Mon, 22 Dec 2014 13:25:20 +0100

erlang-lager (2.0.3.26-1) unstable; urgency=low

  * Imported 2.0.3-30-gced9569.
  * Add VCS-* fields to debian/control.
  * Now maintaining this package for https://apt.jabber.at.
  * Add dpkg-dev (>= 1.16.1~) as build-dependency.
  * Do not install lager_common_test_backend.beam. This is not needed at
    runtime but the file adds erlang-common-test as dependency, which in turn
    has loads of other dependencies.

 -- Mathias Ertl <mati@jabber.at>  Sun, 21 Dec 2014 16:42:52 +0100

erlang-lager (2.0.3-1) unstable; urgency=low

  * Initial release (Closes: #744880)

 -- Philipp Huebner <debalance@debian.org>  Tue, 22 Apr 2014 20:43:25 +0200